Developer portal tweak

--- a/site/developer/developer.css
+++ b/site/developer/developer.css
@@ -38,13 +38,14 @@ a.nav-link:hover:has(.fa-house) {
 }
 
 .navbar-brand.navbar-brand-logo {
-    background-image: url('../validmind.png');
+    background-image: url('../favicon.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left center;
     width: 75px; 
     height: 40px; 
     display: block; 
+    filter: brightness(0) invert(1);
 }
 
 #nav-menu-fa-book-open--documentation {
