--- a/site/styles.css
+++ b/site/styles.css
@@ -709,7 +709,7 @@ nav#TOC .toc-actions ul li a.toc-action {
   color: #3E6C69; 
   padding: 15px;
   padding-bottom: 0px;
-  background-image: url('/validmind.png');
+  background-image: url('/favicon.svg');
   background-size: 5%;
   background-position: right 5px top 10px; 
   background-repeat: no-repeat;
