--- a/site/reference/reference.css
+++ b/site/reference/reference.css
@@ -1,6 +1,6 @@
 /* CSS for the REST API Reference */
 
 .nav-tabs .nav-link.active {
-    background-color: pink;
+    color: #DE257E;
+    font-weight: bold;
 }
-
