Save point for look & feel tweaks

--- a/site/reference/reference.css
+++ b/site/reference/reference.css
@@ -1,6 +1,28 @@
 /* CSS for the REST API Reference */
 
+.nav-bar {
+    width: 430px;
+}
+
 .nav-tabs .nav-link.active {
     color: #DE257E;
     font-weight: bold;
+}
+
+.nav-bar-section.operations {
+    display: none !important;
+}
+
+/* Methods shown in the body */
+
+.method-fg.post {
+    color: #196972;
+}
+
+.method-fg.get {
+    color: #196972;
+}
+
+.method-fg.patch {
+    color: #196972;
 }
