Apply bug fix for Tachyons .fl issue and import as modular CSS

--- a/site/styles.css
+++ b/site/styles.css
@@ -1,3 +1,7 @@
+/* Import modular CSS files */
+@import url('css/_bug-fixes.css');
+@import url('css/_codeblocks.css');
+
 /* Fix ValidMind logo size and alignment */
 @font-face {
   font-family: 'Inter';
@@ -76,9 +80,7 @@ a.dropdown-item:not(nav#TOC a.dropdown-item):hover::before {
   background-color: white;
 }
 
-code {
-  color: #083E44;
-}
+
 
 .navbar-brand img {
   height: 100%;
@@ -164,11 +166,7 @@ div.callout.callout {
   border: 1px solid #083E44;
 }
 
-pre, pre.python, pre.bash, pre.yaml, pre.markdown {
-  background-color: #083E4420;
-  padding: 15px;
-  border-radius: 5px;
-}
+
 
 .hero {
   position: relative;
