--- a/site/theme.scss
+++ b/site/theme.scss
@@ -59,14 +59,10 @@ $mermaid-label-fg-color: #36454F;
   ry: var(--mermaid-node-radius) !important;
 }
 
-.termsfeed-com---palette-light .cc-nb-okagree,
-.termsfeed-com---palette-light .cc-nb-reject,
-.termsfeed-com---palette-light .cc-cp-foot-save {
-  color: #fff;
-  background-color: #de257e;
-}
+/* Import modular SCSS files */
+@import 'scss/bug-fixes';
+@import 'scss/codeblocks';
+@import 'scss/termsfeed';
+@import 'scss/buttons';
+@import 'scss/links';
 
-.termsfeed-com---pc-dialog {
-  color: #111;
-  border-color: #de257e;
-}
