Make login link specific to profile

--- a/site/scss/_buttons.scss
+++ b/site/scss/_buttons.scss
@@ -108,13 +108,17 @@
   background-color: #de257e;
   border: 1px solid #de257e;
 }
-/* Make sure the login button classes to the login link */
-a.nav-link[href="https://app.prod.validmind.ai/"] {
+/* Apply existing button classes to the login nav-links for all environments */
+a.nav-link[href="https://app.prod.validmind.ai/"],
+a.nav-link[href="https://app.staging.validmind.ai/"],
+a.nav-link[href="https://app.dev.vm.validmind.ai/"] {
   @extend #nav-menu-log-in;
 }
 
-/* Disable underline on hover for login button */
-a.nav-link[href="https://app.prod.validmind.ai/"]:hover {
+/* Disable underline on hover for login buttons */
+a.nav-link[href="https://app.prod.validmind.ai/"]:hover,
+a.nav-link[href="https://app.staging.validmind.ai/"]:hover,
+a.nav-link[href="https://app.dev.vm.validmind.ai/"]:hover {
   text-decoration: none !important;
 }
 
