Change scss/ to assets/style/ and update README.md

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -60,9 +60,9 @@ $mermaid-label-fg-color: #36454F;
 }
 
 /* Import modular SCSS files */
-@import 'scss/bug-fixes';
-@import 'scss/codeblocks';
-@import 'scss/termsfeed';
-@import 'scss/buttons';
-@import 'scss/links';
+@import 'assets/styles/bug-fixes';
+@import 'assets/styles/codeblocks';
+@import 'assets/styles/termsfeed';
+@import 'assets/styles/buttons';
+@import 'assets/styles/links';
 
