Move footer CSS into /assets/styles

--- a/site/styles.css
+++ b/site/styles.css
@@ -57,7 +57,7 @@ a.nav-link, a.dropdown-item {
   position: relative;
 }
 
-a.nav-link:not(nav#TOC a.nav-link, .nav-footer a:hover, #nav-menu-log-in:hover):before,
+a.nav-link:not(nav#TOC a.nav-link, #nav-menu-log-in:hover):before,
 a.dropdown-item:before {
   content: "";
   position: absolute;
@@ -818,207 +818,10 @@ body::before {
   display: none; /* Hide the default close button if not needed */
 }
 
-/* Added for the new footer */
-.page-footer {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  background: #4e868b;
-  color: #fff;
-}
-
-.footer-logo-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex: 0 1 200px;
-  min-width: 200px;
-  max-width: 400px;
-}
-
-.footer-logo {
-  width: 140px;
-  margin-bottom: 0.15em;
-}
-
-.footer-logo-column {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-top: 0.25em;
-}
-
-.footer-company-info {
-  font-size: 1em;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 0.25em;
-}
-
-.footer-company-info > * {
-  margin: 0;
-  padding: 0;
-  white-space: normal;
-  max-width: 100%;
-}
-
-.footer-company-info a {
-  display: inline-block;
-  text-decoration: none;
-}
-
-.footer-company-legal {
-  font-size: 1em !important;
-}
-
-.footer a.external::after {
-  content: none !important;
-  background-image: none !important;
-  margin-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.cookie-preferences-link {
-  font-size: 1em !important;
-  min-height: 0px;
-}
-
-#custom-cookie-preferences {
-  display: block;
-  margin-top: 0.5em;
-  text-align: left;
-  color: #fff;
-  font-weight: 500;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.footer-heading {
-  font-weight: bold;
-  font-size: 1.2em;
-}
-
-.footer-section ul {
-  list-style: none;
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.footer-link, .footer-section a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 1.1em;
-}
-
-.footer-section a:hover, .footer-link:hover {
-  text-decoration: underline;
-}
-
-.footer-user-guides {
-  flex: 4 1 0;       /* Make center section much wider */
-  min-width: 300px;
-  max-width: 600px;
-}
-
-.footer-user-guides-columns {
-  display: flex;
-  gap: 1rem;
-}
-
-.footer-user-guides-column-1 {
-  min-width: 125px;
-  flex: 1;
-}
-
-.footer-user-guides-column-2 {
-  min-width: 160px;
-  flex: 1;
-}
 
 
-.page-footer ul,
-.page-footer ul li {
-  list-style: none !important;
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-  padding-left: 0 !important;
-}
 
-/* Make Quarto's footer slots align at the top and reduce spacing */
-.nav-footer {
-  display: flex !important;
-  align-items: flex-start !important;
-  justify-content: space-between !important;
-  gap: 0 !important;
-  width: 100%;
-  padding: 20px 0px;
-  background: #26818B;
-}
 
-/* Remove default padding/margin from slot containers */
-.nav-footer-left, .nav-footer-center, .nav-footer-right {
-  margin: 0.5rem !important;
-  padding: 0.5rem !important;
-  display: flex !important;
-  flex-direction: row !important;
-  align-items: flex-start !important;
-  min-width: 0;
-  margin-right: 0.25rem;
-  flex: 0 1 auto !important;
-  min-width: 0 !important;
-}
-
-.nav-footer-center .nav-item {
-  margin-right: 1.5rem;
-}
-
-.nav-footer-center .nav-item:last-child {
-  margin-right: 0;
-}
-
-/* Remove extra spacing from the User Guides section since it handles its own internal spacing */
-.nav-footer-center .nav-item:first-child {
-  margin-right: 0;
-}
-
-/* Remove any extra margin from User Guides section */
-.footer-user-guides {
-  margin-right: -0.5rem;
-}
-
-.footer-section {
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  color: #fff;
-}
-
-.footer-section,
-.footer-section ul,
-.footer-section li,
-.footer-section a,
-.footer-heading {
-  text-align: left !important;
-}
-
-/* Responsive: stack footer columns and allow full width on small screens */
-@media (max-width: 1124px) {
-  .nav-footer-center,
-  .nav-footer-right {
-    display: none !important;
-  }
-}
-
-@media (min-width: 1125px) {
-  .nav-footer-center,
-  .nav-footer-right {
-    display: flex !important;
-  }
-}
 
 @media (max-width: 768px) {
   #nav-menu-log-in {
@@ -1047,55 +850,6 @@ body::before {
 
   .search-shortcut {
     display: none !important;
-  }
-  .page-footer,
-  .quarto-nav-footer {
-    flex-direction: column !important;
-    align-items: stretch !important;
-  }
-
-  .nav-footer-left,
-  .nav-footer-center,
-  .nav-footer-right {
-    flex-direction: column !important;
-    width: 100% !important;
-    min-width: 0 !important;
-    max-width: 100% !important;
-  }
-
-  .nav-footer-center,
-  .nav-footer-right {
-    display: none;
-  }
-
-  .footer-logo-info,
-  .footer-user-guides,
-  .footer-section {
-    max-width: 100% !important;
-    min-width: 0 !important;
-    width: 100% !important;
-    margin-bottom: 1.5em;
-  }
-
-  .footer-company-info {
-    font-size: 1em;
-    font-weight: normal;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 0.25em;
-  }
-  
-  .footer-company-info > * {
-    margin: 0 !important;
-    padding: 0 !important;
-    font-size: inherit;
-    white-space: normal;
-  }
-
-  .footer-user-guides-columns {
-    flex-direction: column;
-    gap: 0.5em;
   }
 }
 
