--- a/site/theme.scss
+++ b/site/theme.scss
@@ -1,7 +1,7 @@
 /*-- scss:defaults --*/
 // Base ValidMind colors
 $body-color: #222425;
-$link-color: $body-color;
+$link-color: #DE257E;
 
 $navbar-fg: #2e3133;
 $navbar-hl: #de257e;
