Fix footer SCSS embed

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -65,6 +65,5 @@ $mermaid-label-fg-color: #36454F;
 @import 'assets/styles/termsfeed';
 @import 'assets/styles/buttons';
 @import 'assets/styles/links';
-
-@import 'assets/styles/_footer.scss';
+@import 'assets/styles/footer';
 
