Initial reshuffle of definitions into modular files

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -1,31 +1,30 @@
-/* Link Styles */
+// Link Styles
 
-/* Base link styles */
+// Base link styles
+$link-color: #DE257E;
 
 a:hover {
-  text-decoration: underline 2px solid #083E44;
-  /* text-underline-offset: 6px; */
+  text-decoration: underline 2px solid $validmind-teal;
 }
 
-/* Special link hover states */
+// Special link hover states
 a.footnote-ref:hover, a.anchorjs-link:hover {
-  /* color: black; */
   text-decoration: none;
 }
 
-/* Navigation and sidebar link styles */
+// Navigation and sidebar link styles
 a.nav-link:hover, a.sidebar-link:hover {
   text-decoration: none;
-  color: #DE257E;
+  color: $navbar-nav-link-hover-color;
 }
 
 a.dropdown-item:hover {
   text-decoration: none;
-  color: #196972;
-  background-color: #EAF8FA;
+  color: $validmind-dark-teal;
+  background-color: $validmind-bg-hover;
 }
 
-/* NEW NAVBAR LINKS */
+// New navbar links
 a.nav-link, a.dropdown-item {
   position: relative;
 }
@@ -57,47 +56,47 @@ a.dropdown-item:not(nav#TOC a.dropdown-item):hover::before {
   padding: .2rem .7rem;
 }
 
-/* Sidebar link styles */
+// Sidebar link styles
 .sidebar-item a .menu-text {
   text-transform: none;
-  color: #585F60;
+  color: $sidebar-fg;
 }
 
 .sidebar-item a:hover .menu-text {
   text-transform: none;
-  color: #DE257E !important;
+  color: $sidebar-hl !important;
 }
 
 .sidebar-item .sidebar-item-container .sidebar-link.active .menu-text {
-  color: #DE257E !important;
+  color: $sidebar-hl !important;
 }
 
-/* Table of Contents link styles */
+// Table of Contents link styles
 nav#TOC ul > li > a.nav-link {
-  color: #585F60 !important;
+  color: $toc-color !important;
   text-decoration: none;
 }
 
 nav#TOC ul > li > a.nav-link:hover,
 nav#TOC ul > li > a.nav-link.active:hover {
-  color: #196972 !important;
-  background-color: #EAF8FA;
+  color: $validmind-dark-teal !important;
+  background-color: $validmind-bg-hover;
   text-decoration: none;
 }
 
 nav#TOC ul > li > a.nav-link.active, nav#TOC ul > li > a.nav-link.active:hover {
-  color: #DE257E !important;
+  color: $validmind-pink !important;
   text-decoration: none;
 }
 
 nav#TOC .toc-actions ul li a.toc-action {
-  color: #196972;
+  color: $validmind-dark-teal;
   text-decoration: none;
   font-size: 0.9em;
   margin-right: 1em;
 }
 
-/* Announcement banner link styles */
+// Announcement banner link styles
 .quarto-announcement-content a {
   color: white !important;
   text-decoration: underline;
@@ -110,7 +109,7 @@ nav#TOC .toc-actions ul li a.toc-action {
   text-underline-offset: 10px;
 }
 
-/* Footer link styles */
+// Footer link styles
 .footer-company-info a {
   display: inline-block;
   text-decoration: none;
@@ -134,7 +133,7 @@ nav#TOC .toc-actions ul li a.toc-action {
   text-decoration: underline;
 }
 
-/* Responsive styles */
+// Responsive styles
 @media (max-width: 768px) {
   .dropdown-item {
     padding: 0.5rem 1rem;
