--- a/site/assets/styles/_termsfeed.scss
+++ b/site/assets/styles/_termsfeed.scss
@@ -1,11 +1,13 @@
+/* Termsfeed (cookie consent) styles */
+
 .termsfeed-com---palette-light .cc-nb-okagree,
 .termsfeed-com---palette-light .cc-nb-reject,
 .termsfeed-com---palette-light .cc-cp-foot-save {
   color: #fff;
-  background-color: #de257e;
+  background-color: $validmind-pink;
 }
 
 .termsfeed-com---pc-dialog {
   color: #111;
-  border-color: #de257e;
+  border-color: $validmind-pink;
 }
