--- a/site/theme.scss
+++ b/site/theme.scss
@@ -1,65 +1,11 @@
 /*-- scss:defaults --*/
-// Base ValidMind colors
-$body-color: #222425;
-$link-color: #DE257E;
-
-$navbar-fg: #2e3133;
-$navbar-hl: #de257e;
-
-/*$sidebar-bg: #f8fafc;*/
-$sidebar-fg: $body-color;
-$sidebar-hl: #de257e;
-
-$toc-active-border: #de257e;
-
-// Mermaid theme variables
-$mermaid-node-bg-color: #FAFBFB;
-$mermaid-node-fg-color: #083E44;
-$mermaid-edge-color: #083E44;
-$mermaid-fg-color: #36454F;
-$mermaid-fg-color--lighter: #083E44;
-$mermaid-fg-color--lightest: #FAFBFB;
-$mermaid-label-bg-color: #FAFBFB;
-$mermaid-label-fg-color: #36454F;
-
-:root {
-  --mermaid-node-radius: 5px;
-}
-
-/* Target all Mermaid diagram nodes */
-.node rect {
-  rx: var(--mermaid-node-radius) !important;
-  ry: var(--mermaid-node-radius) !important;
-}
-
-/* Additional selectors to ensure all node types are covered */
-.node .basic.label-container {
-  rx: var(--mermaid-node-radius) !important;
-  ry: var(--mermaid-node-radius) !important;
-}
-
-/* Target cluster rectangles */
-.cluster rect {
-  rx: var(--mermaid-node-radius) !important;
-  ry: var(--mermaid-node-radius) !important;
-}
-
-/* Target all rectangles in Mermaid diagrams */
-#mermaid-1 rect, 
-#mermaid-2 rect, 
-#mermaid-3 rect, 
-#mermaid-4 rect, 
-#mermaid-5 rect, 
-#mermaid-6 rect, 
-#mermaid-7 rect, 
-#mermaid-8 rect, 
-#mermaid-9 rect, 
-#mermaid-10 rect {
-  rx: var(--mermaid-node-radius) !important;
-  ry: var(--mermaid-node-radius) !important;
-}
 
 /* Import modular SCSS files */
+@import 'assets/styles/validmind-colors';
+@import 'assets/styles/navbar';
+@import 'assets/styles/sidebar';
+@import 'assets/styles/toc';
+@import 'assets/styles/mermaid';
 @import 'assets/styles/bug-fixes';
 @import 'assets/styles/codeblocks';
 @import 'assets/styles/termsfeed';
