--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -1,4 +1,4 @@
-// Link Styles
+// Link styles
 
 // Base link styles
 $link-color: #DE257E;
@@ -18,19 +18,13 @@ a.nav-link:hover, a.sidebar-link:hover {
   color: $navbar-nav-link-hover-color;
 }
 
-a.dropdown-item:hover {
-  text-decoration: none;
-  color: $validmind-dark-teal;
-  background-color: $validmind-bg-hover;
-}
 
 // New navbar links
-a.nav-link, a.dropdown-item {
+a.nav-link {
   position: relative;
 }
 
-a.nav-link:not(nav#TOC a.nav-link, .nav-footer a:hover, #nav-menu-log-in:hover):before,
-a.dropdown-item:before {
+a.nav-link:not(nav#TOC a.nav-link, .nav-footer a:hover, #nav-menu-log-in:hover):before {
   content: "";
   position: absolute;
   display: block;
@@ -43,17 +37,8 @@ a.dropdown-item:before {
   transition: transform 0.3s ease;
 }
 
-a.nav-link:not(nav#TOC a.nav-link):hover::before,
-a.dropdown-item:not(nav#TOC a.dropdown-item):hover::before {
+a.nav-link:not(nav#TOC a.nav-link):hover::before {
   transform: scaleX(1);
-}
-
-.dropdown-item:active {
-  background-color: white;
-}
-
-.navbar .dropdown-item {
-  padding: .2rem .7rem;
 }
 
 // Sidebar link styles
@@ -109,34 +94,3 @@ nav#TOC .toc-actions ul li a.toc-action {
   text-underline-offset: 10px;
 }
 
-// Footer link styles
-.footer-company-info a {
-  display: inline-block;
-  text-decoration: none;
-}
-
-.footer a.external::after {
-  content: none !important;
-  background-image: none !important;
-  margin-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.footer-link, .footer-section a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 1.1em;
-}
-
-.footer-section a:hover, .footer-link:hover {
-  text-decoration: underline;
-}
-
-// Responsive styles
-@media (max-width: 768px) {
-  .dropdown-item {
-    padding: 0.5rem 1rem;
-    font-size: 0.9rem;
-  }
-}
