--- a/site/theme.scss
+++ b/site/theme.scss
@@ -10,6 +10,7 @@
 @import 'assets/styles/codeblocks';
 @import 'assets/styles/termsfeed';
 @import 'assets/styles/buttons';
+@import 'assets/styles/dropdowns';
 @import 'assets/styles/links';
 @import 'assets/styles/footer';
 
