Fix issue with .nav-footer-right still showing up

--- a/site/assets/styles/_footer.scss
+++ b/site/assets/styles/_footer.scss
@@ -175,7 +175,7 @@
 
 // Hide right section when it only contains whitespace
 .nav-footer-right {
-  display: none;
+  display: none !important;
 }
 
 // Override Bootstrap's centering constraints
