Add more overrides for .nav-footer-right

--- a/site/assets/styles/_footer.scss
+++ b/site/assets/styles/_footer.scss
@@ -206,6 +206,10 @@
   .nav-footer-center {
     justify-content: flex-start !important;
   }
+  
+  .nav-footer-right {
+    display: none !important;
+  }
 }
 
 // Prevent left section from expanding and competing with center
@@ -213,5 +217,9 @@
   .nav-footer-left {
     flex: 0 0 auto !important;
     padding-right: 20px;
+  }
+  
+  .nav-footer-right {
+    display: none !important;
   }
 }
