More CSS reshuffle to remove duplicated or misplaced items

--- a/site/assets/styles/_footer.scss
+++ b/site/assets/styles/_footer.scss
@@ -207,7 +207,7 @@
     justify-content: flex-start !important;
   }
   
-  .nav-footer-right {
+  .nav-footer-center, .nav-footer-right {
     display: none !important;
   }
 }
