--- a/site/assets/styles/_sidebar.scss
+++ b/site/assets/styles/_sidebar.scss
@@ -4,3 +4,62 @@
 $sidebar-bg: $validmind-bg-light;
 $sidebar-fg: $validmind-text-muted;
 $sidebar-hl: $validmind-pink;
+
+// Sidebar link styles
+.sidebar-item a .menu-text {
+  text-transform: none;
+  color: $sidebar-fg;
+}
+
+.sidebar-item a:hover .menu-text {
+  text-transform: none;
+  color: $sidebar-hl !important;
+}
+
+.sidebar-item .sidebar-item-container .sidebar-link.active .menu-text {
+  color: $sidebar-hl !important;
+}
+
+// Sidebar styles
+.sidebar-navigation .sidebar-divider {
+  margin-top: 1rem;
+}
+
+.sidebar-item {
+  color: #747678;
+  padding-top: .3rem;
+  line-height: 1.3;
+}
+
+.sidebar-item-container .active {
+  position: relative;
+}
+
+.sidebar-item-container .active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -0.5rem;
+  bottom: -0.5rem;
+  width: 3px;
+  background-color: #de257e;
+  margin-left: -0.7rem;
+}
+
+.sidebar-item .menu-text {
+  text-transform: uppercase;
+  color: #196972;
+}
+
+.sidebar-item-container .sidebar-item-toggle {
+  cursor: pointer;
+  color: #083E44;
+}
+
+hr.sidebar-divider.hi {
+  border-top: 1px solid #196972 !important;
+}
+
+#quarto-sidebar.sidebar {
+  background-color: #FAFBFB;
+}
