--- a/site/theme.scss
+++ b/site/theme.scss
@@ -2,6 +2,7 @@
 
 /* Import modular SCSS files */
 @import 'assets/styles/validmind-colors';
+@import 'assets/styles/banner';
 @import 'assets/styles/navbar';
 @import 'assets/styles/sidebar';
 @import 'assets/styles/toc';
