--- a/site/assets/styles/_navbar.scss
+++ b/site/assets/styles/_navbar.scss
@@ -5,3 +5,33 @@ $navbar-bg: white;
 $navbar-brand-color: $validmind-pink;
 $navbar-nav-link-color: $validmind-teal;
 $navbar-nav-link-hover-color: $validmind-pink;
+
+// Navbar styles
+.navbar-brand img {
+  height: 100%;
+  margin-top: -5px;
+}
+
+.navbar {
+  border-bottom: 1px solid #dee2e6;
+  padding: 15px;
+}
+
+.nav-item {
+  padding-right: 20px;
+}
+
+.navbar-logo {
+  padding-right: 20px;
+}
+
+// Responsive navbar styles
+@media (max-width: 768px) {
+  .navbar {
+    padding: 10px;
+  }
+  
+  .navbar-brand img {
+    max-height: 20px;
+  }
+}
