Switch order of imports to ensure dropdown text is correct

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -1,6 +1,7 @@
 /*-- scss:defaults --*/
 
-/* Import modular SCSS files */
+/* Import modular SCSS files 
+*/
 @import 'assets/styles/validmind-colors';
 @import 'assets/styles/banner';
 @import 'assets/styles/navbar';
@@ -11,7 +12,7 @@
 @import 'assets/styles/codeblocks';
 @import 'assets/styles/termsfeed';
 @import 'assets/styles/buttons';
-@import 'assets/styles/dropdowns';
 @import 'assets/styles/links';
+@import 'assets/styles/dropdowns';
 @import 'assets/styles/footer';
 
