--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -3,6 +3,10 @@
 // Base link styles
 $link-color: #DE257E;
 
+a, a:link, a:visited {
+  text-decoration: none !important;
+}
+
 a:hover {
   text-decoration: underline 2px solid $validmind-teal;
 }
