Add more footer padding

--- a/site/assets/styles/_footer.scss
+++ b/site/assets/styles/_footer.scss
@@ -201,6 +201,11 @@
   margin-right: 0;
 }
 
+// Footer padding for Beck
+footer.footer .nav-footer, #quarto-header>nav {
+  padding: 2em !important;
+}
+
 // Left-align footer items when wrapping on smaller screens
 @media (max-width: 768px) {
   .nav-footer-center {
