Correctly fix link color and underline

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -11,6 +11,8 @@ $validmind-text-muted: #585F60;
 
 // Base link styles
 $link-color: #DE257E;
+$link-decoration: none;
+$link-hover-decoration: underline 2px solid $validmind-teal !important; // Bootstrap rule not default 
 
 // Code block color variables
 $code-color: $validmind-teal;
