Fix hover text color

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -11,6 +11,7 @@ $validmind-text-muted: #585F60;
 
 // Base link styles
 $link-color: #DE257E;
+$link-hover-color: $link-color;
 $link-decoration: none;
 $link-hover-decoration: underline 2px solid $validmind-teal !important; // Bootstrap rule not default 
 
