Add codeblock SCSS defaults to themes.scss

--- a/site/theme.scss
+++ b/site/theme.scss
@@ -17,7 +17,10 @@ $link-hover-decoration: underline 2px solid $validmind-teal !important; // Boots
 
 // Code block color variables
 $code-color: $validmind-teal;
-$code-block-bg: rgba($validmind-teal, 0.125);
+$code-block-bg: rgba($validmind-teal, 0.1);  // Bootstrap rule not default 
+$code-block-padding:         15px;
+$code-block-border-radius:   5px;
+
 
 // Button color variables
 $btn-primary-bg: $validmind-pink;
