Underline specific links only

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -6,6 +6,13 @@ a {
   text-decoration: none !important;
 }
 
+/* Section-specific underline treatments */
+#prerequisites li > label a:hover,
+#whats-next ul li a:hover,
+div[id^="fn"] > p > a:hover {
+  text-decoration: underline 2px solid #083E44 !important;
+}
+
 /* Special link hover states */
 a.footnote-ref:hover, a.anchorjs-link:hover {
   /* color: black; */
