--- a/site/theme.scss
+++ b/site/theme.scss
@@ -2,6 +2,8 @@
 // Base ValidMind colors
 $body-color: #222425;
 $link-color: #DE257E;
+$link-hover-color: #DE257E;
+
 
 $navbar-fg: #2e3133;
 $navbar-hl: #de257e;
