Address review comments from Beck

--- a/site/assets/styles/_links.scss
+++ b/site/assets/styles/_links.scss
@@ -9,7 +9,9 @@ a {
 /* Section-specific underline treatments */
 #prerequisites li > label a:hover,
 #whats-next ul li a:hover,
-div[id^="fn"] > p > a:hover {
+div[id^="fn"] > p > a:hover,
+#submit-feedback ol li p a:hover,
+#connect-with-us ul li > a:hover {
   text-decoration: underline 2px solid #083E44 !important;
 }
 
