--- a/site/training/assets/training.css
+++ b/site/training/assets/training.css
@@ -6,6 +6,15 @@ a:hover {
     text-decoration: underline 2px solid #042426;
   }  
 
+/* Section-specific underline treatments */
+#prerequisites li > label a:hover,
+#whats-next ul li a:hover,
+div[id^="fn"] > p > a:hover,
+#submit-feedback ol li p a:hover,
+#connect-with-us ul li > a:hover {
+  text-decoration: underline 2px solid #083E44 !important;
+}
+  
 .training-hero {
   position: relative;
   margin-top: -50px;
