--- a/site/styles.css
+++ b/site/styles.css
@@ -39,8 +39,9 @@ body {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   border: 1px solid #222425;
+  padding-left: 10px;
+  padding-bottom: 10px !important;
 }
-
 
 .sidebar-navigation .sidebar-divider {
   margin-top: 1rem;
